<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MTG Cards Info</string>
    <string name="app_long_name">MTG Cards Info</string>
    <string name="action_about">About</string>
    <string name="copyright">The information presented on this site about Magic: The Gathering, both literal and graphical, is copyrighted by Wizards of the Coast. This application is not produced, endorsed, supported, or affiliated with Wizards of the Coast.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="email" translatable="false">mtg@danielebottillo.com</string>
    <string name="feedback" translatable="false">Feedback </string>
    <string name="feedback_text">
        <![CDATA[
		| Version: %1$s |<br/>
		| API Level: %2$s |<br/>
		| Device: %3$s |<br/>
		| Model: %4$s |<br/>
		| Product: %5$s |
		<br/>
        <br/>
		]]>
	</string>
    <string name="version">Version</string>
    <string name="action_search">Search</string>
    <string name="search_result">Results:</string>
    <plurals name="search_limit">
        <item quantity="one">There is a limit of %d result,\n what about a more specific search?</item>
        <item quantity="other">There is a limit of %d results,\n what about a more specific search?</item>
    </plurals>
    <string name="minimum_search">Search requires at least one condition</string>
    <string name="add">Add</string>
    <string name="mtg_color_white" translatable="false">W</string>
    <string name="mtg_color_blue" translatable="false">U</string>
    <string name="mtg_color_black" translatable="false">B</string>
    <string name="mtg_color_red" translatable="false">R</string>
    <string name="mtg_color_green" translatable="false">G</string>
    <string name="mtg_type_artifact">Artifact</string>
    <string name="mtg_type_land">Land</string>
    <string name="mtg_common">Co</string>
    <string name="mtg_uncommon">U</string>
    <string name="mtg_rare">R</string>
    <string name="mtg_mythic_rare">M</string>
    <string name="share">Share</string>
    <string name="share_artwork">Share artwork</string>
    <string name="favourite_add_long">Add to favourites</string>
    <string name="favourite_remove">Remove</string>
    <string name="favourite_add">Save</string>
    <string name="action_saved">Favourites</string>
    <string name="action_home">Sets</string>
    <string name="action_create_db" translatable="false">Create db</string>
    <string name="action_fill_decks" translatable="false">Create random decks</string>
    <string name="action_create_fav" translatable="false">Add random favourites</string>
    <string name="refresh">Refresh</string>
    <string name="action_life_counter">Life Counter</string>
    <string name="plus_one" translatable="false">+</string>
    <string name="minus_one" translatable="false">-</string>
    <string name="plus_five" translatable="false">+5</string>
    <string name="minus_five" translatable="false">-5</string>
    <string name="maximum_player">You\'ve reached the maximum number of players</string>
    <string name="edit_player">Edit name player</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="life_reset">Reset</string>
    <string name="life_dice">Roll dice</string>
    <string name="menu_life_poison">Poison count</string>
    <string name="empty_saved">You don\'t have any favourite cards yet, use the star button on the card page to add it as a favourite or try to change filters.</string>
    <string name="empty_search">No cards found, why don\'t you try something else??</string>
    <string name="empty_deck">No cards found in this deck, use Sets section or search to find cards to add.</string>
    <string name="error_load_image">Impossible to load the image at the moment</string>
    <string name="image_retry">Try again</string>
    <string name="price_error">Error retrieving price</string>
    <string name="add_to_deck_title">Add %s to:</string>
    <string name="add_one_to_deck">Add 1 to deck</string>
    <string name="menu_image">Show image</string>
    <string name="action_crash">Force crash</string>
    <string name="menu_fullscreen_image" translatable="false">Full screen</string>
    <string name="action_lucky">I feel lucky</string>
    <string name="lucky_title">Lucky?</string>
    <string name="menu_life_screen_on">Keep screen on</string>
    <string name="menu_life_two_hg">2HG game</string>
    <string name="pick_sort_option">Sorting cards</string>
    <string name="action_rate">Rate the app</string>
    <string name="share_app">Share App</string>
    <string name="libraries">Libraries</string>
    <string name="action_decks">Decks</string>
    <string name="new_deck_hint">Insert name deck</string>
    <string name="Save">Save</string>
    <string name="sideboard" translatable="false">Sideboard</string>
    <string name="deck_header_creatures">Creatures</string>
    <string name="deck_header_instant_sorceries">Instant and Sorceries</string>
    <string name="deck_header_other">Other</string>
    <string name="deck_header_lands">Lands</string>
    <string name="deck_header_sideboard">Sideboard</string>
    <string name="action_add_one_more">Add one more</string>
    <string name="action_remove_one">Remove one</string>
    <string name="action_remove_all">Remove all</string>
    <string name="action_move_one">Move one</string>
    <string name="action_move_all">Move all</string>
    <string name="deck_title">Deck</string>
    <string name="deck_subtitle" tools:ignore="PluralsCandidate">%d cards</string>
    <string name="deck_delete_title">Delete deck</string>
    <string name="deck_delete_text">This deck is not empty. Are you sure?</string>
    <string name="deck_delete_confirmation">Delete</string>
    <string name="new_deck_quantity_hint">How many (max 30)</string>
    <string name="deck_choose">Choose deck</string>
    <string name="deck_choose_quantity">Choose quantity</string>
    <string name="deck_new">New deck</string>
    <string name="deck_specify">Specify</string>
    <string name="release_note_title_push">What\'s new</string>
    <string name="action_release_note">Release Note</string>
    <string name="empty_cards">No cards available with the current filters.</string>
    <string name="empty_decks">You don\'t have any decks yet!</string>
    <string name="share_card">Share card</string>
    <string name="row_card_name" translatable="false">%1$s%2$s</string>
    <string name="row_life_counter_name" translatable="false">%1$s - %2$d/20</string>
    <string name="card_detail_type">Type</string>
    <string name="card_detail_pt">P/T</string>
    <string name="card_detail_mana">Mana cost</string>
    <string name="card_detail_rarity">Rarity</string>
    <string name="card_detail_set">Set</string>
    <string name="card_detail_original_text">Original text</string>
    <string name="card_detail_rulings">Rulings</string>
    <string name="card_detail_legalities">Legalities</string>
    <string name="search_hint_name">Insert any part of the name</string>
    <string name="search_hint_type">Insert any type or subtype</string>
    <string name="search_hint_text">Insert any word of the text</string>
    <string name="search_power_title">P</string>
    <string name="search_toughness_title">T</string>
    <string name="search_cmc_title">Mana cost converted</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="search_colors_exactly">Exactly these colors</string>
    <string name="search_colors_including">Including these colors</string>
    <string name="search_colors_at_most">At most these colors</string>
    <string name="search_common">Common</string>
    <string name="search_uncommon">Uncommon</string>
    <string name="search_mythic">Mythic</string>
    <string name="search_rare">Rare</string>
    <string name="search_set_all">All</string>
    <string name="search_set_standard">Standard</string>
    <string name="search_color_title">Colors</string>
    <string name="search_rarity_title">Rarity</string>
    <string name="search_card_title">Card Name</string>
    <string name="search_card_types">Card Types</string>
    <string name="search_set_title">Set</string>
    <string name="search_hint_numbers" translatable="false">X,0,1…</string>
    <string name="search_cmc_numbers" translatable="false">X,0,1,W…</string>
    <string name="search_other_title">Other</string>
    <string name="search_land">Land</string>
    <string name="mtg_type_eldrazi" translatable="false">Eldrazi</string>
    <string name="search_card_text">Card text</string>
    <string name="action_send_db">Copy db to sdcard</string>
    <string name="action_copy_db">Replace db from sdcard</string>
    <string name="export">Export</string>
    <string name="error_export_deck">Impossible to export a deck, check that your external storage is available and try again.</string>
    <string name="error_export_db">Impossible to export the database, check that your external storage is available and try again.</string>
    <string name="deck_exported">Deck exported on sdcard</string>
    <string name="db_exported">Db exported on sdcard</string>
    <string name="edit_deck">Edit deck</string>
    <string name="debug_mode_active">Debug mode active</string>
    <string name="action_join_beta">Join Beta</string>
    <string name="join_beta_text">Join The Beta Program on Google+ in order to:\n
        - give feedback\n
        - request new feature\n
        - try new feature ahead of time \n\n\n
        It requires a Google Account.</string>
    <string name="join_beta_action">Join</string>
    <string name="view_type_option">View type</string>
    <string name="main_fragment_tooltip">NEW: you can now switch between list and grid!</string>
    <string name="sort_az">Alphabetically</string>
    <string name="sort_set_number">Set/Number</string>
    <string name="deck_not_imported">Cannot import deck</string>
    <string name="move_card_to_deck">Move one to deck</string>
    <string name="move_card_to_sideboard">Move one to sideboard</string>
    <string name="move_all_card_to_deck">Move all to deck</string>
    <string name="move_all_card_to_sideboard">Move all to sideboard</string>
    <string name="card_migrator_title">Database update in progress</string>
    <string name="card_migrator_notification_title">The app is updating the database of card in order to handle more features.</string>
    <string name="card_migrator_text">The app is updating the database of card in order to handle more features. \n\nCheck your notification center to see if the update has finished.</string>
    <string name="card_migrator_finished">The database has been updated, enjoy!</string>
    <string name="add_new_player">Add new player</string>
    <string name="add_new_deck">Add new deck</string>
    <string name="filter_title">Filters</string>
    <string name="order_title">Order</string>
    <string name="set_choose">Choose a set</string>
    <string name="ok_got_it">OK, got it!</string>
    <string name="join_telegram">Join Telegram help group</string>
    <string name="copy">Copy</string>
    <string name="deck_copied">Deck copied</string>
    <string-array name="header_title_flavor" translatable="false">
        <item>Niv-Mizzet, the Firemind</item>
        <item>Pacifism</item>
        <item>Sizzle</item>
        <item>Inspiration</item>
        <item>Goblin Grenade</item>
        <item>Fodder Cannon</item>
        <item>Goblin Balloon Brigade</item>
        <item>Manabarbs</item>
        <item>Raging Goblin</item>
        <item>Llanowar Elves</item>
        <item>Lightmine Field</item>
        <item>Spire Barrage</item>
    </string-array>
</resources>